Fix add and delete buttons

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div>
       <table id="libraryDisplay">
         <tr>
-          <th>Title</th><th>Author</th><th>Page Count</th><th>Read</th>
+          <th>Title</th><th>Author</th><th>Page Count</th><th>Read</th><th><button id="clearAll">Delete All</button></th>
         </tr>
       </table>
     </div>
