Accept defeat, lol.

--- a/index.html
+++ b/index.html
@@ -33,13 +33,15 @@
             </div>
         </form>
     </div>
-    <button id="newBook">Add a book</button>
-    <div>
-      <table id="libraryDisplay">
-        <tr>
-          <th>ID</th><th>Title</th><th>Author</th><th>Page Count</th><th>Read</th><th><button id="clearAll">Delete All</button></th>
-        </tr>
-      </table>
+    <div id="mainDisplay">
+      <button id="newBook">Add a book</button>
+      <div>
+        <table id="libraryDisplay">
+          <tr>
+            <th>ID</th><th>Title</th><th>Author</th><th>Page Count</th><th>Read</th><th><button id="clearAll">Delete All</button></th>
+          </tr>
+        </table>
+      </div>
     </div>
   </body>
 </html>
